<resources>
    <string name="app_name">Dicoding Submission</string>
    <string name="app_menu_1">List View</string>
    <string name="app_menu_2">Grid View</string>
    <string name="app_menu_3">About</string>
    <string name="app_menu_4">Card View</string>
    <string name="app_extras_1">Favorite</string>
    <string name="app_extras_2">Share</string>
    <string name="app_author_name">Dicky Herlambang</string>
    <string name="app_author_email">herlambangdicky5@gmail.com</string>
    <string name="app_author_contact">Other Contact</string>
    <string name="app_author_contact_git">GitHub</string>
    <string name="app_author_contact_git_id">"@Nicklas373"</string>
    <string name="app_author_contact_linkedin">Linkedin</string>
    <string name="app_author_contact_linkedin_id">Dicky Herlambang</string>
    <string name="app_author_contact_dicoding">Dicoding</string>
    <string name="app_author_contact_dicoding_id">Dicky Herlambang</string>
    <string name="android_version">Versi Android</string>
    <string name="android_detail">Detail</string>
    <string name="android_changelog">Fitur Android</string>
    <string name="android_date">Tanggal Rilis</string>
    <string name="android_dummy">Dummy Feature</string>
    <string name="android_ics_version">4.0.4</string>
    <string name="android_ics_rel">19 Oktober 2011</string>
    <string name="android_ics_feature_1">- Tombol lunak tablet Android 3.x tersedia bagi penggunaan di telepon pintar</string>
    <string name="android_ics_feature_2">- Pemisahan widget di tab baru, terletak pada layar yang bersebelahan dengan aplikasi</string>
    <string name="android_ics_feature_3">- Pembuatan folder yang lebih mudah, dengan gaya drag-and-drop</string>
    <string name="android_jb_version">4.1</string>
    <string name="android_jb_rel">9 Juli 2012</string>
    <string name="android_jb_feature_1">- Waktu vsync pada animasi UI dikelola oleh kerangka kerja Android, termasuk reaksi aplikasi, efek sentuh, komposisi layar, dan penyegaran tampilan</string>
    <string name="android_jb_feature_2">- Tablet dengan layar kecil bisa menyesuaikan tata letak antarmuka dan layar depan seperti pada telepon pintar</string>
    <string name="android_jb_feature_3">- Audio USB (bagi suara eksternal DACs)</string>
    <string name="android_kk_version">4.4</string>
    <string name="android_kk_rel">31 Oktober 2013</string>
    <string name="android_kk_feature_1">- Pembaruan antarmuka dengan bar status dan navigasi transparan pada layar depan.</string>
    <string name="android_kk_feature_2">- Optimasi kinerja pada perangkat dengan spesifikasi yang lebih rendah</string>
    <string name="android_kk_feature_3">- API umum untuk mengembangkan dan mengelola klien pesan teks, kemampuan untuk menentukan aplikasi SMS standar.</string>
    <string name="android_lp_version">5.0</string>
    <string name="android_lp_rel">25 Juni 2014</string>
    <string name="android_lp_feature_1">- Desain antarmuka (tampilan) yang dinamakan "Material Design".</string>
    <string name="android_lp_feature_2">- 64-bit ART compiler</string>
    <string name="android_lp_feature_3">- Project volta, yang berguna untuk meningkatkan daya hidup baterai 30% lebih tahan lama.</string>
    <string name="android_mm_version">6.0</string>
    <string name="android_mm_rel">5 Oktober 2015</string>
    <string name="android_mm_feature_1">- Android Marshmallow memperkenalkan model izin yang didesain ulang</string>
    <string name="android_mm_feature_2">- Marshmallow juga memiliki skema manajemen daya baru bernama Doze yang mengurangi tingkat aktivitas aplikasi latar belakang saat perangkat menentukan bahwa itu tidak sedang aktif ditangani oleh pengguna</string>
    <string name="android_mm_feature_3">- Android Marshmallow memberikan dukungan asli untuk pengenalan sidik jari, memungkinkan penggunaan sidik jari untuk membuka perangkat dan otentikasi Play Store dan pembelian Android Pay</string>
    <string name="android_n_version">7.0</string>
    <string name="android_n_rel">22 Agustus 2016</string>
    <string name="android_n_feature_1">- Peningkatan fungsionalitas Doze, yang bertujuan untuk memperpanjang masa pakai baterai</string>
    <string name="android_n_feature_2">- Unicode 9.0 emoji dan skin modifier support (dan memperlihatkan subset API ICU4J).</string>
    <string name="android_n_feature_3">- New JIT Compiler, membuat instalasi aplikasi 75 persen lebih cepat dan pengurangan 50 persen dalam ukuran kode yang dikompilasi</string>
    <string name="android_oreo_version">8.0</string>
    <string name="android_oreo_rel">21 Agustus 2017</string>
    <string name="android_oreo_feature_1">- Project Treble , perubahan terbesar pada fondasi Android hingga saat ini: arsitektur modular yang membuatnya lebih mudah dan lebih cepat bagi pembuat perangkat keras untuk menghadirkan pembaruan Android.</string>
    <string name="android_oreo_feature_2">- Mendesain ulang Pengaturan Cepat dan Pengaturan dengan latar belakang putih dan hitam serta warna aksen font.</string>
    <string name="android_oreo_feature_3">- Dukungan codec Sony LDAC, ACC, serta codec HD QualX dan aptX Qualcomm</string>
    <string name="android_pie_version">9.0</string>
    <string name="android_pie_rel">6 Agustus 2018</string>
    <string name="android_pie_feature_1">- Antarmuka sistem berbasis gestur opsional baru, memungkinkan pengguna menavigasi OS dengan gesekan lebih sering daripada UI tradisional.</string>
    <string name="android_pie_feature_2">- Android Dashboard, yang memberi tahu pengguna berapa banyak waktu yang mereka habiskan untuk perangkat mereka dan dalam aplikasi, dan memungkinkan pengguna untuk menetapkan batas waktu pada aplikasi.</string>
    <string name="android_pie_feature_3">- Prediksi "Baterai Adaptif", yang menggunakan Doze untuk hibernasi aplikasi pengguna, menentukan OS yang tidak akan digunakan pengguna.</string>
    <string name="android_ten_version">10</string>
    <string name="android_ten_rel">3 September 2019</string>
    <string name="android_ten_feature_1">- Project Mainline, memungkinkan komponen OS inti untuk diperbarui melalui Google Play Store, tanpa memerlukan pembaruan sistem yang lengkap.</string>
    <string name="android_ten_feature_2">- Izin baru untuk mengakses lokasi di latar belakang dan untuk mengakses file foto, video dan audio</string>
    <string name="android_ten_feature_3">- Dukungan untuk codec video AV1, format video HDR10+ dan codec audio Opus</string>
    <string name="android_eleven_version">11</string>
    <string name="android_eleven_rel">8 September 2020</string>
    <string name="android_eleven_feature_1">- Aplikasi yang menargetkan Android 11 hanya diizinkan untuk mengakses file dalam penyimpanan eksternal yang mereka buat sendiri ("penyimpanan terbatas"), sebaiknya yang terdapat dalam direktori khusus aplikasi, dan file audio, gambar, dan video yang terdapat dalam Musik, Gambar, atau  Direktori video.</string>
    <string name="android_eleven_feature_2">- Android 11 memperkenalkan izin "satu kali" untuk kamera, mikrofon, dan lokasi; saat diminta oleh aplikasi, pengguna harus memilih apakah akan memberikan akses setiap kali mereka menggunakan aplikasi, hanya sekali, atau menolak.</string>
    <string name="android_eleven_feature_3">- Jika melakukan boot ulang secara otomatis setelah pembaruan sistem, aplikasi dapat secara otomatis melanjutkan dan mendapatkan kembali akses ke penyimpanan yang dienkripsi dengan kredensial tanpa otentikasi.</string>
</resources>