<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_about_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
        app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/about_author"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        app:civ_border_width="4dp"
        app:civ_border_color="#FFFFFFFF"
        android:src="@drawable/profil"/>

    <TextView
        android:id="@+id/author_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        android:text="@string/app_author_name"
        android:textStyle="bold"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/author_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:text="@string/app_author_email"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/author_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="viewStart"
        android:text="@string/app_author_contact"
        android:textSize="20sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginEnd="16dp"
            android:text="@string/app_author_contact_git"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/author_github_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/app_author_contact_git_id" />

    </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginEnd="16dp"
                android:text="@string/app_author_contact_linkedin"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/author_linkedin_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_weight="1"
                android:text="@string/app_author_contact_linkedin_id" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginEnd="16dp"
                android:text="@string/app_author_contact_dicoding"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/author_dicoding_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_weight="1"
                android:text="@string/app_author_contact_dicoding_id" />

        </TableRow>

    </TableLayout>
</LinearLayout>
</ScrollView>